update pictures, add bonus, add final picture

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <section>
       <h2>HTML</h2>
       <p>Right now the output of your page should look something like this:</p>
-      <figure><img src="img/ScriptEd_halfway_review_1.png" alt=""></figure>
+      <figure class="fullwidth"><img src="img/ScriptEd_halfway_review_1.png" alt=""></figure>
       <p>
         You are going to set up the HTML for your game. First, you should give the
         page the title "ScriptEd Basketball". It will look something like this(except without the typo):
       </p>
-      <figure>
+      <figure class="fullwidth">
         <img src="img/ScriptEd_halfway_review_2.png" alt="">
       </figure>
 
@@ -30,10 +30,10 @@
         Inside the <code>h3</code> write: "Player one score will go here. It should have an id of
         'player-one-score'". Add a second <code>h3</code> and this time give it an
         id of <code>player-two-score</code> and inside of it write: "Player two score
-        will go here. It should have an id of 'player-one-score'". It will look
+        will go here. It should have an id of 'player-two-score'". It will look
         something like this(again expect for the typos):
       </p>
-      <figure><img src="img/ScriptEd_halfway_review_3.png" alt=""></figure>
+      <figure class="fullwidth"><img src="img/ScriptEd_halfway_review_3.png" alt=""></figure>
 
       <p>
         Below the <code>h3</code> for player one add a paragraph with a class of
@@ -43,14 +43,14 @@
          and the paragraph should say: "This is a paragraph for player two's name.
          It has a class of 'player-two-name'". It will look like this:
       </p>
-      <figure><img src="img/ScriptEd_halfway_review_4.png" alt=""></figure>
+      <figure class="fullwidth"><img src="img/ScriptEd_halfway_review_4.png" alt=""></figure>
 
       <p>
         Right below the paragraph for player one put an image that represents them.
         You can search google for whatever image you want. Do the same for player two.
         I chose some nice sneakers:
       </p>
-      <figure><img src="img/ScriptEd_halfway_review_5.png" alt=""></figure>
+      <figure class="fullwidth"><img src="img/ScriptEd_halfway_review_5.png" alt=""></figure>
     </section>
 
     <section>
@@ -60,7 +60,7 @@
         Do not touch this code. You can start writing code where you see the comment
         <code>START WRITING CODE HERE</code>.
       </p>
-      <figure>
+      <figure class="fullwidth">
         <img src="img/ScriptEd_halfway_review_6.png" alt="">
       </figure>
 
@@ -80,14 +80,14 @@
         and you put "Kevin" for player 1 and "Lebron"
         for player 2. It will look this:
       </p>
-      <figure><img src="img/ScriptEd_halfway_review_7.png" alt=""></figure>
+      <figure class="fullwidth"><img src="img/ScriptEd_halfway_review_7.png" alt=""></figure>
 
       <p>
         If you put in the check for a really long name and when you are prompted
         you type in "My name is
         really really long." You should get and alert like this:
       </p>
-      <figure><img src="img/ScriptEd_halfway_review_8.png" alt=""></figure>
+      <figure class="fullwidth"><img src="img/ScriptEd_halfway_review_8.png" alt=""></figure>
 
       <p>
         Next you are going to define a function called <code>tryTwoPointShot</code>
@@ -105,7 +105,7 @@
         greater than 0.2 in your conditional block. If you do this right your console
         will look something like this everytime you click the "Take two point shot" button:
       </p>
-      <figure>
+      <figure class="fullwidth">
         <label for="mn-demo" class="margin-toggle">&#8853;</label>
         <input type="checkbox" id="mn-demo" class="margin-toggle"/>
         <span class="marginnote">
@@ -132,7 +132,7 @@
         If you do it right your console will look something like this after
         clicking the "Take three point shot" button:
       </p>
-      <figure>
+      <figure class="fullwidth">
         <label for="mn-demo" class="margin-toggle">&#8853;</label>
         <input type="checkbox" id="mn-demo" class="margin-toggle"/>
         <span class="marginnote">
@@ -159,8 +159,8 @@
         You have to figure out how how to fill in the blanks.
         When you get it right it will look like:
       </p>
-      <figure><img src="img/ScriptEd_halfway_review_11A.png" alt=""></figure>
-      <figure><img src="img/ScriptEd_halfway_review_11B.png" alt=""></figure>
+      <figure class="fullwidth"><img src="img/ScriptEd_halfway_review_11A.png" alt=""></figure>
+      <figure class="fullwidth"><img src="img/ScriptEd_halfway_review_11B.png" alt=""></figure>
 
       <p>
         We are going to start showing the score. You are going to write a function
@@ -173,7 +173,7 @@
         Test that your function worksby trying a couple of shots and make sure that your the
         score updates as it should.
       </p>
-      <figure>
+      <figure class="fullwidth">
         <label for="mn-demo" class="margin-toggle">&#8853;</label>
         <input type="checkbox" id="mn-demo" class="margin-toggle"/>
         <span class="marginnote">
@@ -182,7 +182,7 @@
         <img src="img/ScriptEd_halfway_review_12A.png" alt="">
 
       </figure>
-      <figure>
+      <figure class="fullwidth">
         <label for="mn-demo" class="margin-toggle">&#8853;</label>
         <input type="checkbox" id="mn-demo" class="margin-toggle"/>
         <span class="marginnote">
@@ -203,7 +203,7 @@
         return <code>false</code>. It will look like the picture below when a player has won.
       </p>
 
-      <figure><img src="img/ScriptEd_halfway_review_13.png" alt=""></figure>
+      <figure class="fullwidth"><img src="img/ScriptEd_halfway_review_13.png" alt=""></figure>
     </section>
     <section>
       <h2>CSS</h2>
@@ -213,13 +213,13 @@
         id selector for each player's score and make player one's score red and player
         two's score orange.
       </p>
-      <figure><img src="img/ScriptEd_halfway_review_14.png" alt=""></figure>
+      <figure class="fullwidth"><img src="img/ScriptEd_halfway_review_14.png" alt=""></figure>
 
       <p>
         Now lets make the paragraphs that have the player's name a little bigger.
         Use the paragraph selector to change the font-size of both paragraphs to 24px.
       </p>
-      <figure>
+      <figure class="fullwidth">
         <label for="mn-demo" class="margin-toggle">&#8853;</label>
         <input type="checkbox" id="mn-demo" class="margin-toggle"/>
         <span class="marginnote">
@@ -237,7 +237,7 @@
         "Take three point shot" except give it a background-color of red and make
         the text orange.
       </p>
-      <figure><img src="img/ScriptEd_halfway_review_16.png" alt=""></figure>
+      <figure class="fullwidth"><img src="img/ScriptEd_halfway_review_16.png" alt=""></figure>
 
       <p>
         Now we are going to do something about the reset button. Let's make it a
@@ -246,7 +246,27 @@
         Lets not make it as large as the shooting  buttons so give it a padding of 10px and
         give the text a font-size of 16px.
       </p>
-      <figure><img src="img/ScriptEd_halfway_review_17.png" alt=""></figure>
+      <figure class="fullwidth"><img src="img/ScriptEd_halfway_review_17.png" alt=""></figure>
+
+      <p>
+        Congratulations! You've built a web application!
+      </p>
+      <figure class="fullwidth"><img src="img/overall_picture.png" alt=""></figure>
+    </section>
+
+    <section>
+      <h2>Bonus</h2>
+      <p>
+        Do you like the colors I chose to style the web page? Why don't you try
+        your own color combination? Maybe give the body element a background color?
+      </p>
+
+      <p>
+        The actual two point shooting percentage in the NBA is 48%, the actual
+        three point shooting percentage is 35%. Change your code in the <code>tryTwoPointShot</code>
+        function and <code>tryThreePointShot</code> function to reflect the actual
+        shooting percentage.
+      </p>
     </section>
   </article>
 
